--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {
     background-color: rgb(60, 110, 218); /* Define cor de fundo */
-    color: blueviolet;
+    color: rgb(226, 43, 165);
 }
